--- a/web.config
+++ b/web.config
@@ -29,9 +29,9 @@
                     <!-- All other URLs are mapped to the node.js site entry point -->
                     <rule name="DynamicContent">
                          <conditions>
-                              <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="True"/>
+                              <add input="app.js" matchType="IsFile" negate="True"/>
                          </conditions>
-                         <action type="Rewrite" url="app.js"/>
+                         <action type="Rewrite" url="index.html"/>
                     </rule>
                </rules>
           </rewrite>
