--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "fs": "0.0.2",
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
+    "nodemailer": "~4.0.1",
     "serve-favicon": "~2.4.2",
     "tedious": "^2.0.1"
   }
