--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "morgan": "~1.8.1",
     "nodemailer": "~4.0.1",
     "serve-favicon": "~2.4.2",
-    "tedious": "^2.0.1"
+    "tedious": "^2.0.1",
+	"formidable": "~1.1.1",
+	"node-id3": "~0.0.1"
   }
 }
